assets/styles/style.scss
@import 'mixins';

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
  font-family: 'Nunito Sans', sans-serif;
}

body {
  max-width: 100vw;
  height: 100%;
  min-height: 100vh;
  overflow-x: hidden;
  position: relative;

  & > header {
    display: flex;
    align-items: center;
    height: 5rem;
    max-width: 1440px;
    margin: auto;
    background-color: #ffffff;
    z-index: 100;
    position: sticky;
    top: 0;
    left: 0;

    * {
      color: #333;
    }

    .container {
      display: flex;
      justify-content: space-between;
      @include padding();
      width: 100%;
      max-width: 1440px;
      position: relative;

      .logo {
        a[href='/'] {
          font-style: normal;
          font-weight: bold;
          font-size: 32px;
          text-decoration: none;
          color: #333;

          span {
            color: #3bdfab;
          }
        }
      }

      button#navToggler {
        padding: 0;
        margin: 0;
        outline: none;
        border: none;
        background-color: transparent;
        display: none;
        height: 3rem;
        width: 3rem;
        // border: 2px solid;

        @media (max-width: 991px) {
          display: flex;
          align-items: center;
          justify-content: center;
        }

        svg {
          height: 3rem;
          width: 3rem;
        }
      }

      nav {
        display: flex;
        background-color: #fff;
        width: 70%;
        justify-content: space-between;

        // sliding nav
        @media (max-width: 991px) {
          position: absolute;
          top: 6rem;
          right: 3rem;
          height: max-content;
          width: max-content;
          padding: 1.5rem;
          border: 1px solid #c4c4c4;
          transform: translateX(200%);
          transition: transform 0.3s ease-in-out;

          @media (max-width: 576px) {
            right: 0rem;
            width: 100%;
          }
          &.show {
            transform: translateX(0%);
          }
        }

        ul {
          display: flex;
          width: max-content;

          @media (max-width: 991px) {
            flex-direction: column;
          }

          li {
            list-style-type: none;
            height: 3rem;
            min-width: max-content;
            display: flex;
            align-items: center;
            margin: 0 1.25rem;

            @media (max-width: 1200px) {
              margin: 0 0.5rem;
            }

            @media (max-width: 991px) {
              justify-content: center;
            }

            a {
              text-decoration: none;
              font-style: normal;
              font-weight: bold;
              font-size: 18px;
              // line-height: 33px;
              color: #333333;
            }
          }
          button {
            @include green-btn();
            margin: 0 0 0 1.5rem;

            @media (max-width: 1200px) {
              margin: 0 0 0 0.5rem;
            }
          }
        }
      }
    }
  }
}

section {
  width: 100%;
}

.top-hero {
  position: relative;

  .container {
    margin-top: 4rem;
    @include padding();
    max-width: 1440px;
    margin: auto;
    display: flex;

    @media (max-width: 991px) {
      margin-top: 0;
      flex-direction: column;
      align-items: center;
    }

    .hero-text {
      @media (max-width: 991px) {
        width: 100%;
      }

      h1 {
        font-style: normal;
        font-weight: bold;
        font-size: 64px;
        line-height: 62px;
        display: flex;
        align-items: center;
        letter-spacing: 0.01em;
        max-width: 459px;
        // height: 186px;
        margin-bottom: 1rem;

        @media (max-width: 991px) {
          font-size: 3rem;
          line-height: 3.5rem;
          max-width: 350px;
        }

        @media (max-width: 767px) {
          font-size: 2rem;
          line-height: 2.5rem;
        }
      }

      p {
        max-width: 440px;
        min-height: 72px;
        font-style: normal;
        font-weight: normal;
        font-size: 16px;
        line-height: 24px;
        margin-bottom: 3rem;

        @media (max-width: 1200px) {
          margin-bottom: 2rem;
        }

        @media (max-width: 767px) {
          margin-bottom: 1.5rem;
        }
      }

      .links {
        @include links-container;
      }
    }

    // .hero-image {
    //   display: flex;
    //   align-items: center;
    //   justify-content: center;

    // }
  }
  img {
    height: 100%;
    object-fit: contain;

    position: absolute;
    top: 0;
    right: 0;

    @media (max-width: 991px) {
      width: 40%;
    }

    @media (max-width: 767px) {
      display: none;
      // position: static;
      // margin: auto;
      // width: 50%;
    }
    // @media (max-width: 991px) {
    //   position: static;
    //   margin: auto;
    //   width: 50%;
    // }
  }
}

.our-partners {
  background-color: #f5f8fc;
  width: 100%;
  position: relative;

  &::before {
    content: '';
    position: absolute;
    bottom: 80%;
    left: calc((100vw - 100%) / -2);
    width: 100vw;
    height: 45%;
    z-index: -1;
    display: block;
    background: #f5f8fc;
    transform: rotate(-3deg);
  }

  .container {
    @include padding();
    max-width: 1440px;
    margin: auto;

    h2 {
      font-style: normal;
      font-weight: bold;
      font-size: 18px;
      line-height: 27px;
    }

    .row {
      display: flex;
      align-items: flex-end;
      flex-wrap: wrap;
      margin-left: -1rem;

      img {
        margin: 1rem;
      }
    }
  }
}
/* ... */

